--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>Cantrip Games</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Using Ethereum blockchain technology to build the evolution of online trading card games." />
+		<meta name="keywords" content="Cantrip, Esports, Ethereum, Ether, Trading Card Game, Trading Cards, TCG, Collectable Card Game, CCG,Hearthstone, MTG, Magic The Gathering" />
+
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -26,6 +29,27 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
+
+		<!-- Android theme colour and icon-->
+		<meta name="theme-color" content="#db5945">
+		<link rel="icon" sizes="192x192" href="images/favicons/android-icon-192x192.png">
+
+		<!-- Social Thumbnail -->
+		<meta property="og:url" content="https://cantrip.games">
+		<meta property="og:title" content="Cantrip Games">
+		<meta property="og:description" content="Using Ethereum blockchain technology to build the evolution of online trading card games.">
+		<meta property="og:image:type" content="image/jpg">
+		<!--<meta property="og:image" content="https://cantrip.games/images/banner.jpg">
+		<meta property="og:image:width" content="1412">
+		<meta property="og:image:height" content="574">-->
+
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@cantrip_games">
+		<meta name="twitter:creator" content="@cantrip_games">
+		<meta name="twitter:title" content="Cantrip Games">
+		<meta name="twitter:description" content="Using Ethereum blockchain technology to build the evolution of online trading card games.">
+		<!--<meta name="twitter:image" content="https://cantrip.games/images/banner.jpg">-->
 
 	</head>
 	<body>
