UPDATED: Facebook page URL

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/cantrip_games" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://facebook.com/cantrip_games" target="_blank" class="icon fa-facebook"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.facebook.com/Cantrip-Games-767016126819210/" target="_blank" class="icon fa-facebook"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/cantripgames" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:hello@cantrip.games" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
