--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
+			<!-- Start of HubSpot Embed Code -->
+			  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4527673.js"></script>
+			<!-- End of HubSpot Embed Code -->
 	</body>
 </html>
