ADD: Hubspot signup form

--- a/index.html
+++ b/index.html
@@ -64,12 +64,22 @@
 
 		<!-- Signup Form -->
 
+			<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+			<script>
+			  hbspt.forms.create({
+				portalId: "4527673",
+				formId: "617785f9-1257-42d5-9fcc-d2f44ed6f43a"
+				submitButtonClass: ".button"
+			});
+			</script>
+			<!--
 			<form id="signup-form"  action="https://games.us16.list-manage.com/subscribe/post" method="POST">
 		    <input type="hidden" name="u" value="572b685dab8c0c194a5560fa0">
 		    <input type="hidden" name="id" value="abccf5e3c4">
 				<input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" value="" placeholder="Email Address">
 				<input type="submit" value="Sign Up" />
 			</form>
+			-->
 
 		<!-- Footer -->
 			<footer id="footer">
