UPDATE to new branding

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><img src="images/favicons/android-icon-192x192.png" alt="" style="width:1.5em;position:relative;top:0.4em"> Cantrip Games</h1>
-				<p>Using <a href="https://ethereum.org" target="_blank">Ethereum</a> blockchain technology to build<br />
-				the evolution of online trading card games.</p>
+				<h1><img src="images/logo.png" alt="" style="width:6em;position:relative;top:0.4em"></h1>
+				<p>We use mysterious blockchain wizardry to build<br />
+				delightful games where you actually own your items</p>
 			</header>
 
 
